--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
     font-size: 32px;
     font-weight: 700;
     color: var(--secondary-color-text); /* Text color */
-    transition: transform 0.3s ease; /* Smooth transition for scaling */
+    
     
 }
 .menu-list ul li a{
@@ -41,4 +41,25 @@
     transform: scale(1.5); /* Scale up on hover */
     text-shadow: 4px 4px 3px var(--primary-color-text), 8px 8px 3px var(--primary-color-text); /* Add shadow effect */
     transition: transform 0.5s ease-in-out, text-shadow 0.5s ease-in-out; /* Smooth transition for scaling and shadow */
+}
+.gallery{
+    display: grid; /* Use flexbox for layout */
+    grid-template-columns: 1fr 1fr 1fr; /* Responsive grid */
+    grid-template-rows: 1fr; 
+    gap: 10px;
+    justify-items: center; /* Center items in the grid */
+    align-items: center; /* Center items in the grid */
+    margin: 0 auto; /* Center the grid */
+    padding: 16px; /* Padding around the grid */
+}
+.gallery-item img{
+    width: 300px; 
+    height: 180px; 
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+    transition: transform 0.3s ease; /* Smooth transition for scaling */
+}
+.gallery img:hover{
+    transform: scale(1.05); /* Scale up on hover */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Shadow effect on hover */
 }
